# Lesson11-C270-Jenkins-Docker-Ansible

./: .env.example  .gitignore  .hadolint.yaml  .trivyignore  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json
ansible/: ansible.cfg  deploy_stack_playbook.yaml  hosts  setup_basics_playbook.yaml
ansible/target-image/: Dockerfile
backend/: main.py  requirements-dev.txt  requirements.txt  test_main.py
docs/: ANSIBLE_DEPLOY.md  JENKINS_PIPELINE.md  README.md
frontend/: app.py
jenkins/: Dockerfile  plugins.txt
jenkins-app/: sample-app.sh
jenkins-app/static/: style.css
jenkins-app/templates/: index.html
jenkins/casc/: jenkins.yaml
monitoring/: prometheus.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: build_and_push.sh  check_staging.sh  deploy.sh  install_ansible.sh  scan.sh  setup_environments.sh  test_local.sh
tests/postman/: student-api.postman_collection.json
